@@ -1,3 +1,7 @@
+2016-01-04	Erik E. Lorenz	<erik.e.lorenz@gmail.com>
+
+	* src/interactive/cinestarov.sh: Cinestar OV movies in Chemnitz
+
 2015-11-10	Erik E. Lorenz	<erik.e.lorenz@gmail.com>
 
 	* src/git/pullall.sh: ff-merging from all remotes into all branches
